--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wxt-react-starter",
+  "name": "wxt-svelte-starter",
   "description": "manifest.json description",
   "private": true,
   "version": "0.0.0",
@@ -11,18 +11,16 @@
     "build:firefox": "wxt build -b firefox",
     "zip": "wxt zip",
     "zip:firefox": "wxt zip -b firefox",
-    "compile": "tsc --noEmit",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
     "postinstall": "wxt prepare"
   },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
   "devDependencies": {
+    "@tsconfig/svelte": "^5.0.4",
     "@types/chrome": "^0.0.280",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.2",
-    "@wxt-dev/module-react": "^1.1.2",
+    "@wxt-dev/module-svelte": "^2.0.0",
+    "svelte": "^5.1.16",
+    "svelte-check": "^4.0.7",
+    "tslib": "^2.8.1",
     "typescript": "^5.6.3",
     "wxt": "^0.19.13"
   }
