--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,18 @@
     "@tsconfig/svelte": "^5.0.4",
     "@types/chrome": "^0.0.280",
     "@wxt-dev/module-svelte": "^2.0.0",
+    "autoprefixer": "^10.4.20",
+    "bits-ui": "^1.3.1",
+    "clsx": "^2.1.1",
+    "mode-watcher": "^0.5.1",
+    "postcss": "^8.5.3",
+    "shadcn-svelte": "^0.14.0",
     "svelte": "^5.1.16",
     "svelte-check": "^4.0.7",
+    "tailwind-merge": "^3.0.1",
+    "tailwind-variants": "^0.3.1",
+    "tailwindcss": "^4.0.7",
+    "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.8.1",
     "typescript": "^5.6.3",
     "wxt": "^0.19.13"
