--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,15 @@
     "postinstall": "wxt prepare"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "@radix-ui/react-slot": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^1.1.1",
+    "lodash.debounce": "^4.0.8",
+    "postcss-nested": "^7.0.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.280",
