--- a/client/.output/chrome-mv3/manifest.json
+++ b/client/.output/chrome-mv3/manifest.json
@@ -26,7 +26,7 @@
     "default_popup": "popup.html"
   },
   "host_permissions": [
-    "*://*/*/*",
+    "<all_urls>",
     "http://localhost/*"
   ],
   "content_security_policy": {
