--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ghosttype-ai",
-  "description": "Enhance your emails with Claude AI",
+  "description": "Enhance your writing with GPT-4",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -15,8 +15,10 @@
     "postinstall": "wxt prepare"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.36.3",
     "@inboxsdk/core": "^2.1.1",
+    "@types/lodash": "^4.17.15",
+    "lodash": "^4.17.21",
+    "openai": "^4.85.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -25,6 +27,10 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@wxt-dev/module-react": "^1.1.2",
+    "autoprefixer": "^10.4.17",
+    "dotenv": "^16.4.7",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "wxt": "^0.19.27"
   }
